# Pane

./: .env.example  .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml
evals/: run.py  tier1_compliance.py  tier2_integration.py  tier3_longsession.py
examples/: ttl_demo.py
examples/claude-code/: CLAUDE.md
examples/claude-code/.claude/: settings.json
examples/claude-code/.claude/hooks/: on_compact.py  on_message.py  on_stop.py
scripts/: inspect_db.py
src/pane/: __init__.py  __main__.py  chat.py  recall.py  schema.py  types.py  web.py
tests/: test_facts.py  test_grouping.py  test_lifecycle.py  test_recall.py  test_ttl.py
