[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pane"
version = "0.1.0"
description = "Context window manager for LLMs. Memory for free."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Waleed Abdullah"}]
dependencies = ["python-dotenv>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
evals = ["anthropic>=0.40"]

[tool.setuptools.packages.find]
where = ["src"]
