[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pane-llm"
version = "0.1.0"
description = "Context window manager for LLMs. Memory for free."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Waleed Abdullah"}]
keywords = ["llm", "memory", "context-window", "agents", "claude"]
dependencies = ["python-dotenv>=1.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/wabdull/Pane"
Repository = "https://github.com/wabdull/Pane"
Issues = "https://github.com/wabdull/Pane/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
evals = ["anthropic>=0.40"]

[tool.setuptools.packages.find]
where = ["src"]
